welcome.lessons.welcome.variables.Variables.scala.code
var Pas=0
while (!estSurBiscuit) {
	avance
	Pas=Pas+1
	
}
Prendbiscuit
while (Pas!=0) {
	recule
	Pas=Pas-1
}
